<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/base_wage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_wage"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/isss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isss"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/afp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afp"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rent"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/net_wage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_wage"
            android:textSize="25sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>