<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:autofillHints="@string/name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hours"
            android:autofillHints="@string/hours"
            android:inputType="number"/>

        <Button
            android:id="@+id/calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>